syntax = "proto3";

option go_package = "/proto";

service ProductService {
	rpc CreateProduct (CreateProductRequest) returns (CreateProductResponse);
	rpc UpdateProduct (UpdateProductRequest) returns (UpdateProductResponse);
	rpc DeleteProduct (DeleteProductRequest) returns (DeleteProductResponse);
	rpc GetProduct (GetProductRequest) returns (GetProductResponse);
	rpc GetProducts (GetProductsRequest) returns (stream GetProductResponse);
}

message CreateProductRequest {
	string product_name = 1;
	string description = 2;
}

message CreateProductResponse {
	string id = 1;
	string product_name = 2;
	string description = 3;
}

message UpdateProductRequest {
	string id = 1;
	string product_name = 2;
	string description = 3;
}

message UpdateProductResponse {
	string id = 1;
	string product_name = 2;
	string description = 3;
}

message DeleteProductRequest {
	string id = 1;
}

message DeleteProductResponse {
	string status = 1;
}

message GetProductRequest {
	string id = 1;
}

message GetProductResponse {
	string id = 1;
	string product_name = 2;
	string description = 3;
}

message GetProductsRequest {}
